--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ partd==1.2.0
     # via dask
 pathspec==0.9.0
     # via black
+pillow==9.0.1
+    # via -r requirements.in
 platformdirs==2.5.1
     # via black
 pycromanager==0.17.0
