--- a/requirements.txt
+++ b/requirements.txt
@@ -18,22 +18,36 @@ docstring-inheritance==1.0.0
     # via pycromanager
 fsspec==2022.2.0
     # via dask
+imageio==2.16.1
+    # via scikit-image
 locket==0.2.1
     # via partd
 mypy-extensions==0.4.3
     # via black
+networkx==2.7.1
+    # via scikit-image
 numpy==1.22.3
     # via
     #   dask
+    #   imageio
     #   pycromanager
+    #   pywavelets
+    #   scikit-image
+    #   scipy
+    #   tifffile
 packaging==21.3
-    # via dask
+    # via
+    #   dask
+    #   scikit-image
 partd==1.2.0
     # via dask
 pathspec==0.9.0
     # via black
 pillow==9.0.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   imageio
+    #   scikit-image
 platformdirs==2.5.1
     # via black
 pycromanager==0.17.0
@@ -44,10 +58,20 @@ pypylon==1.8.0
     # via -r requirements.in
 pyserial==3.5
     # via -r requirements.in
+pywavelets==1.3.0
+    # via scikit-image
 pyyaml==6.0
     # via dask
 pyzmq==22.3.0
     # via pycromanager
+scikit-image==0.19.2
+    # via -r requirements.in
+scipy==1.8.0
+    # via scikit-image
+tifffile==2022.3.25
+    # via
+    #   -r requirements.in
+    #   scikit-image
 tomli==2.0.1
     # via black
 toolz==0.11.2
